--- a/index.html
+++ b/index.html
@@ -1,107 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <meta name="application-name" content="&nbsp;" />
-        <meta name="msapplication-TileColor" content="#FFFFFF" />
-        <meta name="msapplication-TileImage" content="mstile-144x144.png" />
-        <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
-        <meta
-            name="msapplication-square150x150logo"
-            content="mstile-150x150.png"
-        />
-        <meta
-            name="msapplication-wide310x150logo"
-            content="mstile-310x150.png"
-        />
-        <meta
-            name="msapplication-square310x310logo"
-            content="mstile-310x310.png"
-        />
-        <meta
-            name="description"
-            content="The personal website of Johan Haga Mohn."
-        />
-        <meta name="author" content="Johan Haga Mohn" />
-        <meta name="keywords" content="Johan Haga Mohn" />
-        <link
-            rel="apple-touch-icon-precomposed"
-            sizes="57x57"
-            href="favicon/apple-touch-icon-57x57.png"
-        />
-        <link
-            rel="apple-touch-icon-precomposed"
-            sizes="114x114"
-            href="favicon/apple-touch-icon-114x114.png"
-        />
-        <link
-            rel="apple-touch-icon-precomposed"
-            sizes="72x72"
-            href="favicon/apple-touch-icon-72x72.png"
-        />
-        <link
-            rel="apple-touch-icon-precomposed"
-            sizes="144x144"
-            href="favicon/apple-touch-icon-144x144.png"
-        />
-        <link
-            rel="apple-touch-icon-precomposed"
-            sizes="60x60"
-            href="favicon/apple-touch-icon-60x60.png"
-        />
-        <link
-            rel="apple-touch-icon-precomposed"
-            sizes="120x120"
-            href="favicon/apple-touch-icon-120x120.png"
-        />
-        <link
-            rel="apple-touch-icon-precomposed"
-            sizes="76x76"
-            href="favicon/apple-touch-icon-76x76.png"
-        />
-        <link
-            rel="apple-touch-icon-precomposed"
-            sizes="152x152"
-            href="favicon/apple-touch-icon-152x152.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            href="favicon/favicon-196x196.png"
-            sizes="196x196"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            href="favicon/favicon-96x96.png"
-            sizes="96x96"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            href="favicon/favicon-32x32.png"
-            sizes="32x32"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            href="favicon/favicon-16x16.png"
-            sizes="16x16"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            href="favicon/favicon-128.png"
-            sizes="128x128"
-        />
-        <link rel="stylesheet" href="index.css" />
-        <script src="index.js"></script>
-        <title>Johan Haga Mohn</title>
-    </head>
-    <body>
-        <div id="header"></div>
-        <h1>Johan Haga Mohn</h1>
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="application-name" content="&nbsp;" />
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
+    <meta name="description" content="The personal website of Johan Haga Mohn." />
+    <meta name="author" content="Johan Haga Mohn" />
+    <meta name="keywords" content="Johan Haga Mohn" />
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="favicon/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="favicon/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="favicon/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="favicon/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="favicon/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="favicon/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="favicon/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="favicon/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="favicon/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="favicon/favicon-128.png" sizes="128x128" />
+    <link rel="stylesheet" href="index.css" />
+    <script src="index.js"></script>
+    <title>Johan Haga Mohn</title>
+</head>
+
+<body>
+    <div id="header"></div>
+    <img id="sid" src="https://iconarchive.com/download/i61370/majdi-khawaja/ice-age/Sid.ico">
+    <img id="gunnar" src="gunnar.png">
+    <h1 id="text">Johan Haga Mohn</h1>
+</body>
+
 </html>
